[gd_scene load_steps=6 format=3 uid="uid://cup0raircu6at"]

[ext_resource type="Script" uid="uid://8j63cbnh1k54" path="res://Scripts/Inimigos/inimigo_6.gd" id="1_tbf7d"]
[ext_resource type="Texture2D" uid="uid://d3y0qgm3dhi85" path="res://Sprites/Inimigos/placegolder inimigo laser.png" id="2_irq7h"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ao1cn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_irq7h")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_irq7h")
}],
"loop": true,
"name": &"Walking",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3kq0m"]
radius = 15.0
height = 58.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tbf7d"]
radius = 9.0
height = 38.0

[node name="inimigo_6" type="CharacterBody2D" groups=["inimigo"]]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_tbf7d")

[node name="sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -17)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_ao1cn")
animation = &"Idle"
offset = Vector2(2.5, 30)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_3kq0m")

[node name="CollisionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_tbf7d")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="PerceptionTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="body_entered" from="CollisionArea" to="." method="_on_collision_area_body_entered"]
